--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
       <p>"The Anthropocene, the concept that the Earth has moved into a novel geological epoch characterized by human domination of the planetary system, is an increasingly prevalent framework for debate both in academia and as a wider cultural and policy zeitgeist."</p>
       <small>Source: <a href="https://www.annualreviews.org/doi/abs/10.1146/annurev-environ-102016-060854" target=_blank>Malhi (2017)</a></small>
       <p>Inspired by <a href='https://theanthropocene.org/' target='_blank'>The Anthropocene Project</a>, a collaboration between artists Nicholas de Pencier, Edward Burtynsky and Jennifer Baichwal to visualize the human impact on the land, please join me for a tour of select places where the human footprint is dramatically visible from space.</p>
+      <p>Please note that on mobile devices you may have to click the reload icon &circlearrowright; underneath each text section to navigate to the corresponding map location.</p>
 
       <!-- within-panel navigation using HTML anchors -->
       <p align='right'><a href="#location0"> &barwedge; </a>|<a href="#location0"> &wedge; </a>|<a onclick="map.flyTo([24, 48], 2)"> &circlearrowright; </a>|<a href="#location1"> &vee; </a>|<a href="#location4"> &veebar; </a></p>
