--- a/index_v2.html
+++ b/index_v2.html
@@ -3,9 +3,9 @@
 <html>
 
   <!--
-    CODG136 Assignment 3 by Claus Rinner, Ryerson University
+    Expanded from CODG136 Assignment 3 by Claus Rinner, Ryerson University
     Story map extension of Assignment 1 with input from Assignment 2
-    Inspired by AGO Anthropocene Exhibit and https://theanthropocene.org/
+    Used ChatGPT to make this more generic with external data loading
   -->
 
 <head>
@@ -14,7 +14,7 @@
   <!-- For responsive design for mobile devices -->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 
-  <title>Mapping the Anthropocene</title>
+  <title>Scrolly Mapping for All</title>
 
   <!-- Import Leaflet libraries -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
